src/compose/tests/invalid_identifiers/struct_member.wgsl
#define_import_path struct_members

pub struct FineStruct {
    fine: f32,
}

pub struct BadStruct {
    also_fine: f32,
    bad_: f32,
}
